service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: ctse
  name: brand-management-service
spec:
  selector:
    app: brand-management
  ports:
    - protocol: TCP
      port: 3007
      targetPort: 3007
  type: LoadBalancer
  publishNotReadyAddresses: true
